Add about3, about4, and about5 images to About section slider

--- a/index.html
+++ b/index.html
@@ -549,11 +549,17 @@
                     <!-- Image Slider -->
                     <img src="about.png" alt="Mahaveer High School Students" class="about-slide w-full h-[300px] sm:h-[400px] md:h-[500px] object-cover" data-slide="0">
                     <img src="about2.jpg" alt="Mahaveer High School Campus" class="about-slide w-full h-[300px] sm:h-[400px] md:h-[500px] object-cover hidden" data-slide="1">
+                    <img src="about3.jpg" alt="Mahaveer High School Activities" class="about-slide w-full h-[300px] sm:h-[400px] md:h-[500px] object-cover hidden" data-slide="2">
+                    <img src="about4.jpg" alt="Mahaveer High School Events" class="about-slide w-full h-[300px] sm:h-[400px] md:h-[500px] object-contain bg-slate-100 hidden" data-slide="3">
+                    <img src="about5.jpg" alt="Mahaveer High School Facilities" class="about-slide w-full h-[300px] sm:h-[400px] md:h-[500px] object-cover hidden" data-slide="4">
                     <div class="absolute inset-0 bg-orange-900/10 pointer-events-none"></div>
                     <!-- Slide Indicators -->
                     <div class="absolute bottom-4 left-1/2 transform -translate-x-1/2 flex gap-2 z-10">
                         <button class="slide-indicator w-2 h-2 sm:w-3 sm:h-3 rounded-full bg-white transition-all" data-slide="0"></button>
                         <button class="slide-indicator w-2 h-2 sm:w-3 sm:h-3 rounded-full bg-white/50 transition-all" data-slide="1"></button>
+                        <button class="slide-indicator w-2 h-2 sm:w-3 sm:h-3 rounded-full bg-white/50 transition-all" data-slide="2"></button>
+                        <button class="slide-indicator w-2 h-2 sm:w-3 sm:h-3 rounded-full bg-white/50 transition-all" data-slide="3"></button>
+                        <button class="slide-indicator w-2 h-2 sm:w-3 sm:h-3 rounded-full bg-white/50 transition-all" data-slide="4"></button>
                     </div>
                 </div>
             </div>
